# AI_SSH_ManageSYS

./: LICENSE  README.md
NetworkManageSYS/: pyproject.toml  start.py
NetworkManageSYS/backend/: .env  NetworkManage.db  SSHM.py  agent.py  app.py  config.py  init_db.py  requiremets.txt  reset_db.py  test.py  zabbix.py
NetworkManageSYS/backend/instance/: encryption.key
NetworkManageSYS/backend/models/: ChatHistory.py  Device.py  InspectionLog.py  InspectionRecord.py  Permission.py  Role.py  SSHConnection.py  User.py  __init__.py
NetworkManageSYS/backend/static/css/: aichat-style.css  dashboard.css  inspection.css  style.css
NetworkManageSYS/backend/static/js/: aichat.js  dashboard.js  script.js
NetworkManageSYS/backend/templates/: index.html  inspection.html  login.html  ssh_mam.html
ssh_mcp/: pyproject.toml  start.sh
ssh_mcp/app/: black_exec.py  ssh_mcp.py  test.py  zabbix_api.py
