[project]
name = "networkmanagesys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=46.0.5",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask-socketio>=5.6.1",
    "flask-sqlalchemy>=3.1.1",
    "logging>=0.4.9.6",
    "netmiko>=4.6.0",
    "pandas>=2.3.3",
    "paramiko>=4.0.0",
    "psutil>=7.2.2",
    "pytz>=2026.1.post1",
    "requests>=2.32.5",
]
